kubernetes/apps/authentik/authentik/db/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app postgres
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: authentik-db
    cnpg.io/instanceRole: primary
