kubernetes/apps/authentik/authentik/db/istio-serviceentry.yaml
---
# ServiceEntry to allow CloudNative-PG access to Kubernetes API
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: kubernetes-api
  namespace: authentik
spec:
  hosts:
    - kubernetes.default.svc.cluster.local
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: DNS
---
# ServiceEntry for external MinIO server
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: minio-external
  namespace: authentik
spec:
  hosts:
    - minio-external.local
  ports:
    - number: 9768
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 192.168.1.241
---
# DestinationRule for external MinIO
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-external
  namespace: authentik
spec:
  host: minio-external.local
  trafficPolicy:
    tls:
      mode: DISABLE
